--- a/about.scss
+++ b/about.scss
@@ -155,8 +155,11 @@ body{
             font-variant: small-caps;
             margin-top: -5px;
             
-            
         }
+        .px1{
+            text-align: justify;
+        }
+        
 
         
         #px{
