--- a/about.css
+++ b/about.css
@@ -81,7 +81,9 @@ body {
   justify-content: center;
   background: var(--mybg);
   border-radius: 10px;
-  max-width: 100%;
+  max-width: 30%;
+  width: auto;
+  text-align: justify;
   height: auto;
   color: var(--mywhite);
   flex-direction: row;
@@ -95,10 +97,7 @@ body {
   .main-container .second-div ul {
     height: auto;
     margin: auto;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
+    width: 89%;
   }
 }
 @keyframes ul {
@@ -113,7 +112,7 @@ body {
     color: black;
   }
   100% {
-    color: orchid;
+    color: aqua;
   }
 }
 .main-container .second-div ul li {
@@ -121,6 +120,12 @@ body {
   font-size: 19px;
   margin: var(--mymargin);
   font-variant: small-caps;
+}
+@media screen and (max-width: 540px) {
+  .main-container .second-div ul li {
+    margin: 5px 8px;
+    width: 30%;
+  }
 }
 .main-container .myp-div {
   margin-top: 20px;
