--- a/cont.scss
+++ b/cont.scss
@@ -4,7 +4,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow: visible;
+    overflow-y: visible;
+    overflow-x: hidden;
     max-width: 100vw;
     max-height: auto;
     @media screen and (max-width: 500px) {
@@ -36,6 +37,7 @@
 }
 body{
     background: gray;
+    width: 100vw;
 }
 .contact-form{
     max-width:100%;
@@ -58,20 +60,27 @@ body{
 .form-container{
     background: linear-gradient(to bottom, var(--mybg), aliceblue, green,lightblue);
     max-width: 100vw;
-    width: 100%;
+    width: 80%;
     height: 90%;
     display: grid;
     place-content: center;
     margin: auto;
     padding-top: 20px;
     padding-bottom: 10px;
+    @media screen and (max-width: 500px) {
+        width: 100%;
+        height: auto;
+        margin: auto;
+    }
+   
+
     form{
         background-color: rgba(0, 0, 0, 0.841);
         width: 100%;
         padding: 50px 100px;
         height: auto;
         @media screen and (max-width: 500px) {
-            width: 90%;
+            width: 100%;
             height: auto;
             margin: auto;
         }
@@ -91,6 +100,14 @@ body{
             border: none;
             outline: none;
             font-size: 20px;
+            @media screen and (max-width: 540px) {
+                width: 100%;
+                height: auto;
+                margin: auto;
+                font-size: 15px;
+            }
+           
+    
             &:focus-visible{
                 background-color: coral;
             }
@@ -104,6 +121,12 @@ body{
             border: none;
             outline: none;
             font-size: 20px;
+            @media screen and (max-width: 540px) {
+                width: 100%;
+                height: auto;
+                margin: auto;
+                font-size: 15px;
+            }
         }
         textarea{
             margin-top: 10px;
@@ -113,6 +136,12 @@ body{
             &:focus-within{
                 background-color: antiquewhite;
                 color: orangered;
+            }
+            @media screen and (max-width: 540px) {
+                width: 100%;
+                height: auto;
+                margin: auto;
+                font-size: 20px;
             }
         }
         #submit{
@@ -128,7 +157,10 @@ body{
                 transition: all 0.4s;
                 cursor: pointer;
             }
-
+            @media screen and (max-width:540px) {
+                font-size: 15px;
+                padding: 5px 5px;
+            }
         }
         #reset{
             padding: 10px 20px;
@@ -142,7 +174,10 @@ body{
                 transition: all 0.4s;
                 cursor: pointer;
             }
-
+            @media screen and (max-width:540px) {
+                font-size: 15px;
+                padding: 5px 5px;
+            }
         }
     }
 
@@ -162,10 +197,12 @@ body{
 @media screen and (max-width:540px) {
     width: 100%;
     height: auto;
-    overflow: hidden;
     margin-bottom: 0;  
     padding-top: 10px;
-    margin: auto 10px;
+    margin: auto;
 }
-
+P{
+    margin: auto 10px;
+    padding: auto 10px;
+}
 }
