--- a/home.css
+++ b/home.css
@@ -440,7 +440,7 @@ header {
 }
 .main-content ul {
   margin: auto;
-  max-width: 85%;
+  width: 30%;
   border: none;
   outline: none;
   border-radius: 10px;
@@ -457,11 +457,25 @@ header {
   background-color: rgba(0, 0, 0, 0.412);
   box-shadow: 2px 3px 2px 3px burlywood, -2px -3px 2px 3px burlywood;
 }
+@media screen and (max-width: 540px) {
+  .main-content ul {
+    width: 89%;
+    margin: auto;
+    padding: auto;
+  }
+}
 .main-content ul li {
   padding: 10px;
   color: white;
-  list-style: decimal;
-  margin: 10px 28px;
+  list-style: none;
+  margin: auto 15px;
+}
+@media screen and (max-width: 540px) {
+  .main-content ul li {
+    list-style-type: none;
+    margin: 5px 8px;
+    width: 30%;
+  }
 }
 
 .media-content {
@@ -520,7 +534,8 @@ header {
   line-height: 1.4;
   font-size: 18px;
 }
-.quick-link #myfooter {
+
+#myfooter {
   text-align: center;
   font-size: 14px;
   margin-top: 20px;
@@ -529,16 +544,19 @@ header {
   font-weight: bold;
   background: whitesmoke;
   max-width: 100vw;
-  height: auto;
+  height: 15vh;
 }
 @media screen and (max-width: 540px) {
-  .quick-link #myfooter {
+  #myfooter {
     width: 100%;
     height: 20vh;
     margin-bottom: 0;
     overflow: hidden;
   }
-  .quick-link #myfooter p {
+  #myfooter p {
     margin: 20px 10px;
   }
+}
+#myfooter p {
+  margin: 20px;
 }/*# sourceMappingURL=home.css.map */
