--- a/home.scss
+++ b/home.scss
@@ -418,7 +418,7 @@ header{
         }
         ul{
             margin: auto;
-            max-width: 85%;
+            width: 30%;
             border: none;
             outline: none;
             border-radius: 10px;
@@ -430,14 +430,22 @@ header{
             flex-direction: row;
             background-color: rgba(0, 0, 0, 0.412);
             box-shadow: 2px 3px 2px 3px burlywood, -2px -3px 2px 3px burlywood;
-        
+        @media screen and (max-width:540px) {
+            width: 89%;
+            margin: auto;
+            padding: auto;
+        }
             li{
                 padding: 10px;
                 color: white;
-                list-style: decimal;
-                margin: 10px 28px;
+                list-style: none;
+                margin: auto 15px;
                 
-    
+                @media screen and (max-width: 540px) {
+                    list-style-type: none;
+                    margin: 5px 8px;
+                    width: 30%;
+                }
             }
         }
 }
@@ -497,25 +505,29 @@ header{
         font-size: 18px;
 
     }
-    #myfooter{
-        text-align: center;
-        font-size: 14px;
-        margin-top: 20px;
-        padding-top: 20px;
-        color: darkslategrey;
-        font-weight: bold;
-        background: whitesmoke;
-        max-width: 100vw;
-        height: auto;
-        @media screen and (max-width: 540px) {
-            width: 100%;
-            height: 20vh;
-            margin-bottom: 0;
-            overflow: hidden;
-            p{
-                margin: 20px 10px;
-            }
+    
+}
+#myfooter{
+    text-align: center;
+    font-size: 14px;
+    margin-top: 20px;
+    padding-top: 20px;
+    color: darkslategrey;
+    font-weight: bold;
+    background: whitesmoke;
+    max-width: 100vw;
+    height: 15vh;
+    @media screen and (max-width: 540px) {
+        width: 100%;
+        height: 20vh;
+        margin-bottom: 0;
+        overflow: hidden;
+        p{
+            margin: 20px 10px;
         }
-
     }
+    p{
+        margin: 20px;
+    }
+
 }
