--- a/home.scss
+++ b/home.scss
@@ -219,12 +219,12 @@ header{
     }
 }
     .navbar-items{
-        margin: auto -25%;
+        margin: auto -22%;
         max-width: 100%;
         font-variant: small-caps;
         z-index: 80;
         position: absolute;
-        top: 5%;
+        top: 15%;
         left: 25%;
 
         @media screen and (max-width:540px) {
@@ -273,7 +273,7 @@ header{
                 #icons{
                     color: aqua;
                     font-size: medium;
-                    margin-left: -5px;
+                    margin-left: -15px;
                     position: absolute;
                     &:hover{
                         color: red;
@@ -286,7 +286,7 @@ header{
                 #ikons{
                     color: aqua;
                     font-size: medium;
-                    margin-left: -5px;
+                    margin-left: -15px;
                     position: absolute;
                     &:hover{
                         color: red;
@@ -299,6 +299,7 @@ header{
                 #about{
                     display: none;
                     margin: auto;
+                    background-color: gray;
                     @media screen and (max-width:600px) {
                         width: 100%;
                         margin: auto;
@@ -331,6 +332,7 @@ header{
                     display: none;
                     margin: auto;
                     width: auto;
+                    background-color: gray;
 
                     @media screen and (max-width:600px) {
                         width: 100%;
