--- a/about.css
+++ b/about.css
@@ -81,21 +81,20 @@ body {
   justify-content: center;
   background: var(--mybg);
   border-radius: 10px;
-  max-width: 30%;
-  width: auto;
-  text-align: justify;
+  width: 30%;
+  margin: auto;
   height: auto;
+  gap: 10px;
   color: var(--mywhite);
   flex-direction: row;
   flex-wrap: wrap;
-  gap: 10px;
   font-size: var(--myfont);
   list-style: none;
   animation: ul 8s linear infinite;
 }
-@media screen and (min-width: 600px) {
+@media screen and (max-width: 540px) {
   .main-container .second-div ul {
-    height: auto;
+    padding: auto;
     margin: auto;
     width: 89%;
   }
@@ -116,8 +115,9 @@ body {
   }
 }
 .main-container .second-div ul li {
-  padding: 20px;
-  font-size: 19px;
+  padding: 10px;
+  color: white;
+  list-style: none;
   margin: var(--mymargin);
   font-variant: small-caps;
 }
