--- a/home.scss
+++ b/home.scss
@@ -250,7 +250,7 @@ header{
                 height: auto;
                 position: relative;
                 top: 0;
-                left: 0;
+                left: -20px;
 
 
             }
