--- a/about.css
+++ b/about.css
@@ -81,7 +81,7 @@ body {
   justify-content: center;
   background: var(--mybg);
   border-radius: 10px;
-  width: 30%;
+  width: 50%;
   margin: auto;
   height: auto;
   gap: 10px;
@@ -96,7 +96,7 @@ body {
   .main-container .second-div ul {
     padding: auto;
     margin: auto;
-    width: 89%;
+    width: auto;
   }
 }
 @keyframes ul {
@@ -123,8 +123,8 @@ body {
 }
 @media screen and (max-width: 540px) {
   .main-container .second-div ul li {
-    margin: 5px 8px;
-    width: 30%;
+    margin: 5px auto;
+    width: auto;
   }
 }
 .main-container .myp-div {
