--- a/home.css
+++ b/home.css
@@ -268,7 +268,7 @@ header {
     height: auto;
     position: relative;
     top: 0;
-    left: 0;
+    left: -20px;
   }
 }
 .container .navbar-items ul li {
