--- a/cont.css
+++ b/cont.css
@@ -116,7 +116,7 @@ body {
 }
 @media screen and (max-width: 540px) {
   .form-container form input {
-    width: auto;
+    width: 100%;
     height: auto;
     margin: 5px auto;
     font-size: 15px;
