--- a/cont.scss
+++ b/cont.scss
@@ -108,7 +108,7 @@ body{
             outline: none;
             font-size: 20px;
             @media screen and (max-width: 540px) {
-                width: auto;
+                width: 100%;
                 height: auto;
                 margin: 5px auto;
                 font-size: 15px;
