--- a/home.css
+++ b/home.css
@@ -268,7 +268,7 @@ header {
     height: auto;
     position: relative;
     top: 0;
-    left: -20px;
+    left: 0;
   }
 }
 .container .navbar-items ul li {
@@ -495,13 +495,33 @@ header {
   font-size: 20px;
   line-height: 1.5;
 }
-.media-content i {
-  padding: 10px;
-  color: darkorange;
-  font-size: 30px;
+.media-content a {
+  text-decoration: none;
+  margin: auto 20px;
+  text-align: justify;
+  color: crimson;
   font-weight: bold;
-  text-indent: 50px;
-  margin: 20px auto;
+}
+@media screen and (max-width: 600px) {
+  .media-content a {
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+    margin: auto 20px;
+    position: relative;
+    left: 0;
+  }
+}
+.media-content i {
+  padding: 5px;
+  background-color: green;
+  border-radius: 50%;
+  position: relative;
+  color: white;
+  right: -20px;
+  font-size: 25px;
+  font-weight: bold;
+  margin: 10px auto;
 }
 @media screen and (max-width: 600px) {
   .media-content i {
@@ -509,7 +529,8 @@ header {
     max-height: 100%;
     margin: auto;
     font-size: 20px;
-    padding: 2px;
+    padding: 5px;
+    display: inline-block;
   }
 }
 .media-content i:hover {
