--- a/home.scss
+++ b/home.scss
@@ -250,7 +250,7 @@ header{
                 height: auto;
                 position: relative;
                 top: 0;
-                left: -20px;
+                left: 0;
 
 
             }
@@ -467,19 +467,39 @@ header{
             line-height: 1.5;
 
     }
+        a{
+            text-decoration: none;
+            margin:  auto 20px;
+            text-align: justify;
+            color: crimson;
+            font-weight: bold;
+            @media screen and (max-width: 600px) {
+                max-width: 100%;
+                max-height: 100%;
+                display: block;
+                margin: auto 20px;
+                position: relative;
+                left: 0;
+                
+            }
+        }
         i{
-        padding: 10px;
-        color: darkorange;
-        font-size: 30px;
+        padding: 5px;
+        background-color: green;
+        border-radius: 50%;
+        position: relative;
+        color: white;
+        right: -20px;
+        font-size: 25px;
         font-weight: bold;
-        text-indent: 50px;
-        margin: 20px auto;
+        margin: 10px auto;
         @media screen and (max-width: 600px) {
             max-width: 100%;
             max-height: 100%;
             margin: auto;
             font-size: 20px;
-            padding: 2px;
+            padding: 5px;
+            display: inline-block;
         }
         &:hover{
             cursor: pointer;
