--- a/cont.scss
+++ b/cont.scss
@@ -79,7 +79,7 @@ body{
         width: 100%;
         padding: 50px 100px;
         height: auto;
-        @media screen and (max-width: 540px) {
+        @media screen and (max-width: 500px) {
             width: 100%;
             height: auto;
             margin: auto;
@@ -90,14 +90,7 @@ body{
             color: aqua;
             font-size: 16px;
             font-variant: small-caps;
-        }
-            i{
-            position: relative;
-            left: 0;
-            margin-left: -20%;
-            top: 40px;
-            text-align: justify;
-            
+        
         }
         input{
             margin: 5px auto;
@@ -110,7 +103,7 @@ body{
             @media screen and (max-width: 540px) {
                 width: 100%;
                 height: auto;
-                margin: 5px auto;
+                margin: auto;
                 font-size: 15px;
             }
            
