--- a/cont.css
+++ b/cont.css
@@ -85,7 +85,7 @@ body {
   padding: 50px 100px;
   height: auto;
 }
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 500px) {
   .form-container form {
     width: 100%;
     height: auto;
@@ -97,13 +97,6 @@ body {
   color: aqua;
   font-size: 16px;
   font-variant: small-caps;
-}
-.form-container form i {
-  position: relative;
-  left: 0;
-  margin-left: -20%;
-  top: 40px;
-  text-align: justify;
 }
 .form-container form input {
   margin: 5px auto;
@@ -118,7 +111,7 @@ body {
   .form-container form input {
     width: 100%;
     height: auto;
-    margin: 5px auto;
+    margin: auto;
     font-size: 15px;
   }
 }
