--- a/don.scss
+++ b/don.scss
@@ -3,14 +3,20 @@
     padding: 0;
     box-sizing: 0;
     overflow-y: visible;
-    overflow-x: hidden;
+@media screen and (max-width:600px) {
+    margin: auto;
+    width: auto;
+    height: auto;
+    overflow-y:visible
+
+}
 }
 body{
     background: linear-gradient(to bottom, yellow, magenta, blue,hotpink,aqua,orangered,black, brown, green);
-    max-width: 200vw;
-    max-height: 200vh;
-    height: 100%;
-    width: 100%;
+    max-width: 100vw;
+    max-height: 100vh;
+    margin: auto;
+    position: static;
     @media screen and (max-width:540px) {
         width: 100%;
         height: auto;
@@ -20,15 +26,16 @@ body{
 .donate-container{
     background-color: white;
     max-width: 100vw;
-    width: 90%;
+    max-height: 200vh;
+    width: 85%;
     height: auto;
     display: grid;
     place-content: center;
-    margin: 10% auto;
+    margin: auto;
     position: relative;
-    padding: 10px;
+    padding: 20px;
     @media screen and (max-width:540px) {
-        width: 100%;
+        width: auto;
         height: auto;
         margin: auto;
         padding: 20px;
@@ -44,11 +51,11 @@ body{
         font-size: 18px;
         font-family: Verdana;
         color: grey;
-        margin: auto;
+        margin: 10px auto;
         @media screen and (max-width:540px) {
             width: auto;
             height: auto;
-            margin: auto;
+            margin: auto 10%;    
         }
     }
     #images{
@@ -63,6 +70,7 @@ body{
             width: auto;
             height: auto;
             margin: auto;
+            display: grid;
         }
         img{
             width: 400px;
@@ -72,192 +80,279 @@ body{
             @media screen and (max-width: 540px) {
                 width: 200px;
                 height: 200px;
-                margin: auto;
+                margin:auto;
+                position: relative;
+                top: auto;
             }
         }
 
     }
-}
-.donate-form{
-    display: grid;
-    place-content: center;
-    padding: 20px;
-    margin: 10px auto;
-    width: auto;
-    height: auto;
-
-form{
-    background: linear-gradient(to right, black, white,black, white);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex: row;
-    width: auto;
-    height: auto;
-
-    #myOne{
+    .donate-form{
         display: grid;
         place-content: center;
+        margin: 10px auto;
+        background-color: moccasin;
+        width: 70%;
+        max-width: 400px;
+        height: 130px;
+        padding: 50px;
         @media screen and (max-width:540px) {
+            margin: auto 0%;
             width: auto;
             height: auto;
-            margin: auto;
-        }
-        #symbol-1{
-            position:absolute;
-            left: 37%;
-            z-index: 1;
-            bottom: 2.5%;
-            width: 63px;
-            padding: 5px;
-            border: none;
-            outline: none;
-            cursor: pointer;
-            height: auto;
-            background-color: grey;
-        }
-
-    #one_time{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        input{
-            margin: 5px auto;
-            padding: 5px;
             position: relative;
-            top: 30px;
-            flex: 1;
-            margin-left: 0;
+            right: 0%;
+            left: 0%;
         }
-        #btn{
-            margin: auto;
-            padding: 7px 9px;
-            background-color: white;
-            border: none;
-            outline: none;
-            color: #000;
-            position: absolute;
-            left: 34%;
-            top: 70.5%;
-            z-index: 1;
-            flex: 1;
-            transition: all 0.4s;
-            cursor: pointer;
-            &:hover{
-                background-color: gainsboro;
-                color: blue;
-            }
+    }
+    form{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        justify-content: space-between;
+        position: relative;
+        @media screen and (max-height:540px) {
+            position: relative;
+            left: 50%;
+            right: 50%;
+        }
+        #myOne{
+            display: grid;
+            place-content: center;
             @media screen and (max-width:540px) {
-                #btn{
-                    margin: auto;
-                    padding: 7px 9px;
-                    background-color: white;
+                margin-top: -17px;
+            }
+
+            #one_time{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: row;
+                width: fit-content;
+                flex-wrap: wrap;
+                #one-time{
+                    padding: 5px;
+                    margin:1px auto;
+                    flex: 1;
+                    position: relative;
+                    left: 25%;
+                    top: 0%;
+                    width: 70px;
                     border: none;
                     outline: none;
-                    color: #000;
-                    position: absolute;
-                    left: 34%;
-                    top: 70.5%;
-                    z-index: 1;
-                    flex: 1;
-                    transition: all 0.4s;
+                    border-radius: 3px;
+                    background-color: grey;
                     cursor: pointer;
+                    color: blue;
+                    transition: all 0.8s;
                     &:hover{
-                        background-color: gainsboro;
-                        color: blue;
+                        background-color: lightslategrey;
                     }
-                    
+                    @media screen and (max-width:540px) {
+                        position: relative;
+                        left: 25%;
+                        top: auto;
+                        margin: 1px auto;
+                    }
+                }
+                #total_1{
+                    padding: 5px;
+                    width: 30%;
+                    position: relative;
+                    left: -25%;
+                    top: 55%;
+                    background-color: cornsilk;
+                    border: 0.5px solid aqua;
+                    outline: none;
+                @media screen and (max-width:540px) {
+                    width: 45%;
+                    position: relative;
+                    left: 35%;
+                    top: 0%;
+                    margin: 3px auto;
+                }
+                
+                }
+                
+            }
+            #btn{
+                font-weight: bold;
+                padding: 5px;
+                width: 80px;
+                left: 30%;
+                top: -70%;
+                z-index: 1;
+                font-variant: small-caps;
+                position: absolute;
+                margin: 5px auto;
+                background-color: blue;
+                color: #fff;
+                border: none;
+                outline: none;
+                &:hover{
+                    cursor: pointer;
+                    transition: all 0.9s;
+                    background-color:aquamarine;
+                    color: #000;
+                }
+                @media screen and (max-height:540px) {
+                width: 80px;
+                left: 20%;
+                top: -45%;
+                position: absolute;
+                font-variant: small-caps;
+                margin: 5px auto;
+                }
+            }
+            #symbol-1{
+                padding: 4px;
+                width: 60px;
+                position: absolute;
+                left: 57%;
+                bottom: -55%;
+                border: 0.5px solid aqua;
+                outline: none;
+                border-left: none;
+                cursor: pointer;
+                background-color: cornsilk;
+                @media screen and (max-width:540px) {
+                    width: 60px;
+                    position: absolute;
+                    left: 68%;
+                    bottom: 5%;
+       
                 }
             }
         }
-        
-        @media screen and (max-width:540px) {
-            width: auto;
-            height: auto;
-            margin: auto;
-        }
-    }
-}
-    #myMonth{
-        display: grid;
-        place-content: center;
-    
-        #symbol-2{
-            position: absolute;
-            right: 0%;
-            bottom: 2.5%;
-            width: 62px;
-            z-index: 1;
-            border: none;
-            cursor: pointer;
-            outline: none;
-            padding: 5px;
-            height: auto;
-            background-color: grey;
-        }
-    
-    #_monthly{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: row;
-        flex-wrap: wrap;
-        input{
-            margin: 5px auto;
-            padding: 5px;
-            position: relative;
-            top: 30px;
-            flex: 1;
-            margin-left: 0;
-        }
-        #btn-mon{
-            margin: auto;
-            padding: 7px 9px;
-            background-color: white;
-            border: none;
-            outline: none;
-            color: #000;
-            position: absolute;
-            right: 34.9%;
-            z-index: 1;
-            top: 70.5%;
-            flex: 1;
-            transition: all 0.4s;
-            cursor: pointer;
-            &:hover{
-                background-color: gainsboro;
-                color: blue;
+        #mymonth{
+            display: grid;
+            place-content: center;
+            @media screen and (max-width:540px) {
+                margin-top: -17px;
             }
+            #_monthly{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: row;
+                width: fit-content;
+                flex-wrap: wrap;
+                #monthly{
+                    padding: 5px;
+                    margin:1px auto;
+                    flex: 1;
+                    position: relative;
+                    right: -25%;
+                    top: 0%;
+                    width: 70px;
+                    border: none;
+                    outline: none;
+                    border-radius: 3px;
+                    color: #fff;
+                    background-color: grey;
+                    cursor: pointer;
+                    transition: all 0.8s;
+                    &:hover{
+                        background-color: lightslategrey;
+                    }
+                    @media screen and (max-width:540px) {
+                        margin: 1px auto;
+                    }
+                }
+                #total{
+                    padding: 5px;
+                    width: 30%;
+                    background-color: cornsilk;
+                    border: 0.5px solid aqua;
+                    outline: none;
+                    position: relative;
+                    right: 27%;
+                    top: 55%;
+                    @media screen and (max-width:540px) {
+                      width: 45%;
+                      top: 0%;
+                      right: -35%;  
+                      margin: 5px auto;
+                    }
+                }
+                
+            }
+            #btn-mon{
+                padding: 5px;
+                width: 80px;
+                font-weight: bold;
+                font-variant: small-caps;
+                position: absolute;
+                right: 30%;
+                top: -70%;
+                margin: 5px auto;
+                background-color: aqua;
+                color: grey;
+                border: none;
+                outline: none;
+                &:hover{
+                    cursor: pointer;
+                    transition: all 0.9s;
+                    background-color:#000;
+                    color: #fff;
+                }
+                @media screen and (max-width:600px) {
+                width: 80px;
+                right: 8%;
+                top: -70%;
+                font-variant: small-caps;
+                position: absolute;
+                margin: 5px auto;
+                }
+            }
+            #symbol-2{
+                padding: 4px;
+                width: 60px;
+                position: absolute;
+                right: 27%;
+                bottom: -55%;
+                border: 0.5px solid aqua;
+                outline: none;
+                border-left: none;
+                cursor: pointer;
+                background-color: cornsilk;
+                @media screen and (max-width:540px) {
+                    width: 60px;
+                    position: absolute;
+                    right: 15%;
+                    bottom: 7%;
+
+       
+                }
+            }
+        }
+        #next{
+            padding: 10px;
+            background-color: green;
+            font-weight: bold;
+            position: absolute;
+            right: 15%;
+            bottom: -38px;
+            margin: auto;
+            border: none;
+            outline: none;
+            cursor: pointer;
+            transition: all 0.7s;
+            color: aliceblue;
+            z-index: 1;
+           &:hover{
+            background-color: aqua;
+            color: red;
+           } 
+           @media screen and (max-width:540px) {
+            position: absolute;
+            right: -10%;
+            bottom: 0%;
+            margin: auto;
+
             
         }
-        @media screen and(max-width:540px) {
-            margin: auto;
-            padding: 7px 9px;
-            background-color: white;
-            border: none;
-            outline: none;
-            color: #000;
-            position: absolute;
-            right: 34.9%;
-            z-index: 1;
-            top: 70.5%;
-            flex: 1;
-            transition: all 0.4s;
-            cursor: pointer;
-            &:hover{
-                background-color: gainsboro;
-                color: blue;
-            }
-               
         }
     }
 }
-@media screen and (max-width:540px) {
-    width: auto;
-    height: auto;
-    margin: auto;
-}
-}
 
-}
